# stf-sir

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
docs/: coherence-foundations-en.md  coherence-foundations.md  coherence-paper.tex  plugin-sdk-guide.md  rag-integration-guide.md  retention-baseline.md  sir-graph.md  stf-sir-article.md  sts-formalization.md  sts-paper.tex  v1-invariants.md
docs/adr/: ADR-SEM-001-positioning.md
docs/roadmap/: ROADMAP-STF-SIR-V2.md  SDD-CORE-SEMANTICS.md
docs/spec/: SPEC-STF-CORE-SEMANTICS.md  agent-tools-v1.json  benchmark-report-v1.md  (+10 more)
examples/: sample.md  sample.zmd
schemas/: CHANGELOG.md  zmd-v1.schema.json  zmd-v2.schema.json
scripts/: release-check.sh  validate-migration-v1-v2.sh
spec/: stf-sir-spec-v1.md
src/: cli.rs  error.rs  lib.rs  main.rs
tests/: benchmark_harness.rs  bridge_exploratory.rs  bridge_semantics.rs  coherence.rs  coherence_exploratory.rs  compile.rs  computational_coherence.rs  conformance.rs  diff_engine.rs  fixtures_matrix.rs  formula_coherence.rs  formula_parser_exploratory.rs  golden.rs  grounding.rs  grounding_exploratory.rs  hallucination.rs  hallucination_boundaries.rs  invalid_matrix.rs  metamorphic.rs  metamorphic_coherence.rs  operational_coherence.rs  operational_exploratory.rs  operational_formula.rs  plugin_system.rs  proptest_coherence_engine.rs  proptest_invariants.rs  query_engine.rs  rag_integration.rs  regression_semantic_bridge.rs  retention.rs  retention_coherence_interaction.rs  sir_graph.rs  sir_grounding.rs  unicode_spans.rs
(+149 files in other folders)
